--- a/header.html
+++ b/header.html
@@ -1,11 +1,18 @@
 <header>
-	<nav class="navbar ">
-		<div class="container-fluid">
-			<div class="navbar-header">
+	<nav class="navbar-container">
+		<div class="container-header">
+			<div class="navbar-logo">
 				<a class="navbar-brand">
-					<img src="http://www.express.com/content/dam/logos-fonts/logos/express/express-logo-white.png" alt="Express logo" height="32" width="200">
+					<img src="http://www.express.com/content/dam/logos-fonts/logos/express/express-logo-white.png" alt="Express logo">
 				</a>
 			</div>
+			<ul class="navbar-header-menu breadcrumb">
+				<li id="li-women"><a href="">WOMEN</a></li>
+				<li id="li-men"><a href="">MEN</a></li>
+				<li id="li-sale"><a href="">SALE</a></li> 
+				<li id="li-trending"><a href="">TRENDING</a></li> 
+				<li id="li-edition"><a href="">EDITION</a></li> 
+			</ul>
 		</div>
 	</nav>
 </header>
