--- a/header.html
+++ b/header.html
@@ -6,13 +6,35 @@
 					<img src="http://www.express.com/content/dam/logos-fonts/logos/express/express-logo-white.png" alt="Express logo">
 				</a>
 			</div>
-			<ul class="navbar-header-menu breadcrumb">
-				<li id="li-women"><a href="">WOMEN</a></li>
-				<li id="li-men"><a href="">MEN</a></li>
-				<li id="li-sale"><a href="">SALE</a></li> 
-				<li id="li-trending"><a href="">TRENDING</a></li> 
-				<li id="li-edition"><a href="">EDITION</a></li> 
-			</ul>
+			<div class="div-navbar-header-menu col-md-4">
+				<ul class="navbar-header-menu breadcrumb">
+					<li id="li-women"><a href="">WOMEN</a></li>
+					<li id="li-men"><a href="">MEN</a></li>
+					<li id="li-sale"><a href="">SALE</a></li> 
+					<li id="li-trending"><a href="">TRENDING</a></li> 
+					<li id="li-edition"><a href="">EDITION</a></li> 
+				</ul>	
+			</div>
+
+			<div class="container-secondary container-promo">
+				<div class="">
+					Free Shipping On Orders $125+
+					<span>
+						<a href="#" class="promo-item">
+							Details
+						</a>
+					</span>
+				</div>
+
+				<div class="container-promo-secondary">
+					<ul class="navbar-header-menu breadcrumb">
+						<li class="headerlogincomponent"><img src=""></li>
+						<li class="headerlogincomponent">Sign Out</i>
+						<li class="headerlogincomponent">Sign In</li>
+					</ul>	
+				</div>
+			</div>
+
 		</div>
 	</nav>
 </header>
