--- a/header.html
+++ b/header.html
@@ -8,11 +8,24 @@
 			</div>
 			<div class="div-navbar-header-menu col-md-4">
 				<ul class="navbar-header-menu breadcrumb">
-					<li id="li-women"><a href="">WOMEN</a></li>
-					<li id="li-men"><a href="">MEN</a></li>
-					<li id="li-sale"><a href="">SALE</a></li> 
-					<li id="li-trending"><a href="">TRENDING</a></li> 
-					<li id="li-edition"><a href="">EDITION</a></li> 
+					<li id="li-women" class="show-menu-nav">
+						<a href="">WOMEN</a>
+						<div class="navbar-dropdown-woman">
+						<h6>FEATURED</h6>
+						<hr>
+						<ul class="menu-featured">
+							<li><a>New Arrivals</a></li>
+							<li><a>Lesli Dale Jewelry</a></li>
+							<li><a>Deepa Gurnani Jewelry</a></li>
+							<li><a>Home & Travel Accessories</a></li>
+							<li><a>Clearance</a></li>
+						</ul>
+					</div>
+					</li>
+					<li id="li-men" class="show-menu-nav"><a href="">MEN</a></li>
+					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li> 
+					<li id="li-trending" class="show-menu-nav"><a href="">TRENDING</a></li> 
+					<li id="li-edition" class="show-menu-nav"><a href="">EDITION</a></li> 
 				</ul>	
 			</div>
 
