--- a/header.html
+++ b/header.html
@@ -10,17 +10,115 @@
 				<ul class="navbar-header-menu breadcrumb">
 					<li id="li-women" class="show-menu-nav">
 						<a href="">WOMEN</a>
-						<div class="navbar-dropdown-woman">
-						<h6>FEATURED</h6>
-						<hr>
-						<ul class="menu-featured">
-							<li><a>New Arrivals</a></li>
-							<li><a>Lesli Dale Jewelry</a></li>
-							<li><a>Deepa Gurnani Jewelry</a></li>
-							<li><a>Home & Travel Accessories</a></li>
-							<li><a>Clearance</a></li>
-						</ul>
-					</div>
+						
+						<div class="navbar-dropdown-menu horizontal-form">
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>FEATURED</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>New Arrivals</a></li>
+										<li><a>Lesli Dale Jewelry</a></li>
+										<li><a>Deepa Gurnani Jewelry</a></li>
+										<li><a>Home & Travel Accessories</a></li>
+										<li><a>Clearance</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>DRESSES</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Mini Dresses</a></li>
+										<li><a>Midi Dresses</a></li>
+										<li><a>Maxi Dresses</a></li>
+										<li><a>Fit & Flare Dresses</a></li>
+										<li><a>Slip Dresses</a></li>
+										<li><a>Cocktail Dresses</a></li>
+										<li><a>Little Black Dresses</a></li>
+										<li><a>Jumpsuits & Rompers</a></li>
+										<li><a>Two-Piece Chic</a></li>
+										<li><a>Wedding</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>TOPS</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Express One Eleven</a></li>
+										<li><a>Bralettes & Bodysuits</a></li>
+										<li><a>Camis & Tanks</a></li>
+										<li><a>Graphic Tees</a></li>
+										<li><a>Tees</a></li>
+										<li><a>Shirts & Blouses</a></li>
+										<li><a>Portofino Shirts</a></li>
+										<li><a>Going Out Tops</a></li>
+										<li><a>Sweaters & Cardigans</a></li>
+										<li><a>Jackets & Outerwear</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>BOTTOMS</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Jeans</a></li>
+										<li><a>Pants</a></li>
+										<li><a>Editor Pants</a></li>
+										<li><a>Columnist Pants</a></li>
+										<li><a>Leggings</a></li>
+										<li><a>Crops & Culottes</a></li>
+										<li><a>Flares & Wide Legs</a></li>
+										<li><a>Shorts</a></li>
+										<li><a>Skirts</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>ACCESSORIES</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Pin & Patches</a></li>
+										<li><a>Jewelry</a></li>
+										<li><a>Handbags</a></li>
+										<li><a>Bag Charms</a></li>
+										<li><a>Belts</a></li>
+										<li><a>Sunglasses</a></li>
+										<li><a>Scarves & Ponchos</a></li>
+										<li><a>Hats & Hair Accessories</a></li>
+										<li><a>Tights & Socks</a></li>
+										<li><a>Fragrance & Beauty</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>ACCESSORIES</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Pin & Patches</a></li>
+										<li><a>Jewelry</a></li>
+										<li><a>Handbags</a></li>
+										<li><a>Bag Charms</a></li>
+										<li><a>Belts</a></li>
+										<li><a>Sunglasses</a></li>
+										<li><a>Scarves & Ponchos</a></li>
+										<li><a>Hats & Hair Accessories</a></li>
+										<li><a>Tights & Socks</a></li>
+										<li><a>Fragrance & Beauty</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6>ACCESSORIES</h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a>Pin & Patches</a></li>
+										<li><a>Jewelry</a></li>
+										<li><a>Handbags</a></li>
+										<li><a>Bag Charms</a></li>
+										<li><a>Belts</a></li>
+										<li><a>Sunglasses</a></li>
+										<li><a>Scarves & Ponchos</a></li>
+										<li><a>Hats & Hair Accessories</a></li>
+										<li><a>Tights & Socks</a></li>
+										<li><a>Fragrance & Beauty</a></li>
+									</ul>
+							</div>
+						</div>
 					</li>
 					<li id="li-men" class="show-menu-nav"><a href="">MEN</a></li>
 					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li> 
