--- a/header.html
+++ b/header.html
@@ -1,12 +1,33 @@
-<header>
-	<nav class="navbar-container">
-		<div class="container-header">
+<header class="container14-full ">
+	<nav class="navbar-container container14-header">
+		<div class="container-header container">
+		<div>
 			<div class="navbar-logo">
 				<a class="navbar-brand">
 					<img src="http://www.express.com/content/dam/logos-fonts/logos/express/express-logo-white.png" alt="Express logo">
 				</a>
 			</div>
-			<div class="div-navbar-header-menu col-md-4">
+			<div class="container-secondary container-promo">
+				<div class="">
+					Free Shipping On Orders $125+
+					<span>
+						<a href="#" class="promo-item">
+							Details
+						</a>
+					</span>
+				</div>
+
+				<div class="container-promo-secondary">
+					<ul class="navbar-header-menu breadcrumb">
+						<li class="headerlogincomponent"><img src=""></li>
+						<li class="headerlogincomponent">Sign Out</i>
+						<li class="headerlogincomponent">Sign In</li>
+					</ul>	
+				</div>
+			</div>
+			</div>
+
+			<div class="div-navbar-header-menu col-md-7">
 				<ul class="navbar-header-menu breadcrumb">
 					<li id="li-women" class="show-menu-nav">
 						<a href="">WOMEN</a>
@@ -127,25 +148,7 @@
 				</ul>	
 			</div>
 
-			<div class="container-secondary container-promo">
-				<div class="">
-					Free Shipping On Orders $125+
-					<span>
-						<a href="#" class="promo-item">
-							Details
-						</a>
-					</span>
-				</div>
-
-				<div class="container-promo-secondary">
-					<ul class="navbar-header-menu breadcrumb">
-						<li class="headerlogincomponent"><img src=""></li>
-						<li class="headerlogincomponent">Sign Out</i>
-						<li class="headerlogincomponent">Sign In</li>
-					</ul>	
-				</div>
-			</div>
-
+			
 		</div>
 	</nav>
 </header>
