--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-express">
 	<hr>
-	<div class="container-footer">
+	<div class="container-footer container">
 		<div class="row section-promo">
 			<div class="col-xs-12 col-sm-4 col-md-4">
 				<h6 class="title-footer title-social">What's Happening Now</h6>
