--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 	<hr>
 	<div class="container-footer container">
 		<div class="row section-promo">
-			<div class="col-xs-12 col-sm-4 col-md-4">
+			<div class="col-xs-4">
 				<h6 class="title-footer title-social">What's Happening Now</h6>
 				<ul class="social">
 					<li><a class="social-link icon-instagram" href="" target="_blank"></a></li>
@@ -13,7 +13,7 @@
 				</div>
 				<h6 class="headline"><a>sign up for email</a></h6>
 			</div>
-			<div class="col-xs-12 col-sm-2 col-md-2">
+			<div class="col-xs-4">
 				<h6 class="title-footer title-locator">Store Locator</h6>
 				<h6 id="locator" class="title-footer toggle-locator" data-toggle="collapse" data-target=".location">
 					Store Locator
@@ -36,7 +36,7 @@
 					<a>Get Directions</a>
 				</p>
 			</div>
-			<div class="col-xs-12 col-sm-2 col-md-2">
+			<div class="col-xs-4">
 				<h6 class="title-footer title-service">Customer Service</h6>
 				<h6 id="service" class="title-footer toggle-service" data-toggle="collapse" data-target=".list-service">Customer Service</h6>
 				<ul id="ul-service" class="list-service links-list">
@@ -51,7 +51,7 @@
 					<li><a>Who We Are</a></li>
 				</ul>
 			</div>
-			<div class="col-xs-12 col-sm-2 col-md-2">
+			<div class="col-xs-4">
 				<h6 class="title-footer title-popular">Popular Pages</h6>
 				<ul class="links-list">
 					<li><a>Dresses</a></li>
@@ -67,7 +67,7 @@
 					<li><a>Men's Sweaters</a></li>
 				</ul>
 			</div>
-			<div class="col-xs-12 col-sm-2 col-md-2">
+			<div class="col-xs-4">
 				<h6 class="title-footer">EXPRESS NEXT Credit Card</h6>
 			</div>
 		</div>
