--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,7 @@
-<footer class="footer-express">
+<footer class="footer-express container14-full">
 	<hr>
-	<div class="container-footer container">
+	<div class="container14-header">
+	  <div class="container-footer container">
 		<div class="row section-promo">
 			<div class="col-xs-4">
 				<h6 class="title-footer title-social">What's Happening Now</h6>
@@ -13,7 +14,7 @@
 				</div>
 				<h6 class="headline"><a>sign up for email</a></h6>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h6 class="title-footer title-locator">Store Locator</h6>
 				<h6 id="locator" class="title-footer toggle-locator" data-toggle="collapse" data-target=".location">
 					Store Locator
@@ -36,7 +37,7 @@
 					<a>Get Directions</a>
 				</p>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h6 class="title-footer title-service">Customer Service</h6>
 				<h6 id="service" class="title-footer toggle-service" data-toggle="collapse" data-target=".list-service">Customer Service</h6>
 				<ul id="ul-service" class="list-service links-list">
@@ -51,7 +52,7 @@
 					<li><a>Who We Are</a></li>
 				</ul>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h6 class="title-footer title-popular">Popular Pages</h6>
 				<ul class="links-list">
 					<li><a>Dresses</a></li>
@@ -67,7 +68,7 @@
 					<li><a>Men's Sweaters</a></li>
 				</ul>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-2">
 				<h6 class="title-footer">EXPRESS NEXT Credit Card</h6>
 			</div>
 		</div>
@@ -87,5 +88,6 @@
 				</ul>
 			</div>			
 		</div>
-	</div>	
+	  </div>
+	</div>
 </footer>
