--- a/footer.html
+++ b/footer.html
@@ -5,11 +5,11 @@
 			<div class="col-xs-12 col-sm-4">
 				<h6 class="title-footer title-social">What's Happening Now</h6>
 				<ul class="social">
-					<li><a class="social-link icon-instagram" href="" target="_blank"></a></li>
-					<li><a class="social-link icon-facebook" href="" target="_blank"></a></li>
+					<li><a class="social-link icon-instagram" href="#" target="_blank"></a></li>
+					<li><a class="social-link icon-facebook" href="#" target="_blank"></a></li>
 				</ul>
 				<div class="show-modal-sign">
-					<a class="btn btn-link">sign up for email</a>					
+					<a href="#" class="btn btn-link">sign up for email</a>					
 				</div>
 				<h6 class="headline"><a>sign up for email</a></h6>
 			</div>
@@ -19,7 +19,7 @@
 					Store Locator
 				</h6>
 				<p id="find-icon" class="location link-locator">
-					<a>
+					<a href="#">
 						<span class="icon-pin"></span>
 						Find A Store
 					</a>
@@ -33,7 +33,7 @@
 					5280-7141
 				</p>
 				<p class="link-locator">
-					<a>Get Directions</a>
+					<a href="#">Get Directions</a>
 				</p>
 			</div>
 			<div class="col-xs-12 col-sm-2">
@@ -41,30 +41,30 @@
 				<h6 id="service" class="title-footer toggle-service" data-toggle="collapse" data-target=".list-service">Customer Service</h6>
 				<ul id="ul-service" class="list-service links-list">
 					<li>(888) EXP-1980</li>
-					<li><a>Help</a></li>
-					<li><a>Returns Policy</a></li>
-					<li><a>Express Coupons</a></li>
-					<li><a>Contact Us</a></li>
+					<li><a href="#">Help</a></li>
+					<li><a href="#">Returns Policy</a></li>
+					<li><a href="#">Express Coupons</a></li>
+					<li><a href="#">Contact Us</a></li>
 				</ul>
 				<h6 class="title-footer">About Express</h6>
 				<ul class="links-list">
-					<li><a>Who We Are</a></li>
+					<li><a href="#">Who We Are</a></li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-sm-2">
 				<h6 class="title-footer title-popular">Popular Pages</h6>
 				<ul class="links-list">
-					<li><a>Dresses</a></li>
-					<li><a>Spring Dresses</a></li>
-					<li><a>Summer Dresses</a></li>
-					<li><a>Women's Jeans</a></li>
-					<li><a>Women's Jeans</a></li>
-					<li><a>Men's Jeans</a></li>
-					<li><a>Women's Suits</a></li>
-					<li><a>Men's Suits</a></li>
-					<li><a>Women's Tops</a></li>
-					<li><a>Off the Shoulders Tops</a></li>
-					<li><a>Men's Sweaters</a></li>
+					<li><a href="#">Dresses</a></li>
+					<li><a href="#">Spring Dresses</a></li>
+					<li><a href="#">Summer Dresses</a></li>
+					<li><a href="#">Women's Jeans</a></li>
+					<li><a href="#">Women's Jeans</a></li>
+					<li><a href="#">Men's Jeans</a></li>
+					<li><a href="#">Women's Suits</a></li>
+					<li><a href="#">Men's Suits</a></li>
+					<li><a href="#">Women's Tops</a></li>
+					<li><a href="#">Off the Shoulders Tops</a></li>
+					<li><a href="#">Men's Sweaters</a></li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-sm-2">
@@ -74,15 +74,15 @@
 		<div class="row section-legal">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<div class="container-logo">
-					<a class="logo-black" href="" target="_blank">
+					<a class="logo-black" href="#" target="_blank">
 						<img src="/test1/imagenes/express-logo-black.png">
 					</a>
 				</div>
 				<ul class="sublinks-left">
-					<li><a>Terms & Conditions</a></li>
-					<li><a>About Ads</a></li>
-					<li><a>Privacy Policy</a></li>
-					<li><a>Site Map</a></li>
+					<li><a href="#">Terms & Conditions</a></li>
+					<li><a href="#">About Ads</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Site Map</a></li>
 					<li>© 2016 Express. All rights reserved</li>
 				</ul>
 			</div>			
