--- a/header.html
+++ b/header.html
@@ -1,161 +1,47 @@
 <header class="header-style">
-	<nav class="navbar-container">
-		<div class="container-header container">
-		<div>
-			<div class="navbar-logo">
-				<a class="navbar-brand">
-					<img src="http://www.express.com/content/dam/logos-fonts/logos/express/express-logo-white.png" alt="Express logo">
+	<div class="container-header">
+		<nav class="navbar" role="navigation">
+			<div class="container-promo">
+				Free Shipping On Orders $125+
+				<span>
+					<a href="#" class="promo-item">Details</a>
+				</span>
+			</div>			
+			<div class="container-header-logo navbar-header">
+				<a class="navbar-brand" href="/">
+					<img src="/test1/imagenes/express-logo-white.png">
 				</a>
 			</div>
-			<div class="container-secondary container-promo">
-				<div class="">
-					Free Shipping On Orders $125+
-					<span>
-						<a href="#" class="promo-item">
-							Details
-						</a>
-					</span>
-				</div>
-
-				<div class="container-promo-secondary">
-					<ul class="navbar-header-menu breadcrumb">
-						<li class="headerlogincomponent tooltipConten"><img src="" class="tooltiptext">Hello</li>
-						<li class="headerlogincomponent">Sign Out</i>
-						<li class="headerlogincomponent">Sign In</li>
-					</ul>	
-				</div>
-			</div>
-			</div>
-
-			<div class="div-navbar-header-menu col-md-7">
-				<ul class="navbar-header-menu breadcrumb">
-					<li id="li-women" class="tooltipConten">
-						
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav nav-custom">
+					<li id="li-women">
 						<a href="">WOMEN</a>
-						
-						<div class="tooltiptext horizontal-form">
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>FEATURED</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>New Arrivals</a></li>
-										<li><a>Lesli Dale Jewelry</a></li>
-										<li><a>Deepa Gurnani Jewelry</a></li>
-										<li><a>Home & Travel Accessories</a></li>
-										<li><a>Clearance</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>DRESSES</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Mini Dresses</a></li>
-										<li><a>Midi Dresses</a></li>
-										<li><a>Maxi Dresses</a></li>
-										<li><a>Fit & Flare Dresses</a></li>
-										<li><a>Slip Dresses</a></li>
-										<li><a>Cocktail Dresses</a></li>
-										<li><a>Little Black Dresses</a></li>
-										<li><a>Jumpsuits & Rompers</a></li>
-										<li><a>Two-Piece Chic</a></li>
-										<li><a>Wedding</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>TOPS</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Express One Eleven</a></li>
-										<li><a>Bralettes & Bodysuits</a></li>
-										<li><a>Camis & Tanks</a></li>
-										<li><a>Graphic Tees</a></li>
-										<li><a>Tees</a></li>
-										<li><a>Shirts & Blouses</a></li>
-										<li><a>Portofino Shirts</a></li>
-										<li><a>Going Out Tops</a></li>
-										<li><a>Sweaters & Cardigans</a></li>
-										<li><a>Jackets & Outerwear</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>BOTTOMS</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Jeans</a></li>
-										<li><a>Pants</a></li>
-										<li><a>Editor Pants</a></li>
-										<li><a>Columnist Pants</a></li>
-										<li><a>Leggings</a></li>
-										<li><a>Crops & Culottes</a></li>
-										<li><a>Flares & Wide Legs</a></li>
-										<li><a>Shorts</a></li>
-										<li><a>Skirts</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>ACCESSORIES</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Pin & Patches</a></li>
-										<li><a>Jewelry</a></li>
-										<li><a>Handbags</a></li>
-										<li><a>Bag Charms</a></li>
-										<li><a>Belts</a></li>
-										<li><a>Sunglasses</a></li>
-										<li><a>Scarves & Ponchos</a></li>
-										<li><a>Hats & Hair Accessories</a></li>
-										<li><a>Tights & Socks</a></li>
-										<li><a>Fragrance & Beauty</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>ACCESSORIES</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Pin & Patches</a></li>
-										<li><a>Jewelry</a></li>
-										<li><a>Handbags</a></li>
-										<li><a>Bag Charms</a></li>
-										<li><a>Belts</a></li>
-										<li><a>Sunglasses</a></li>
-										<li><a>Scarves & Ponchos</a></li>
-										<li><a>Hats & Hair Accessories</a></li>
-										<li><a>Tights & Socks</a></li>
-										<li><a>Fragrance & Beauty</a></li>
-									</ul>
-							</div>
-							<div class="vertical-form col-md-2 container-menu-list">
-									<h6>ACCESSORIES</h6>
-								<hr>
-									<ul class="menu-featured">
-										<li><a>Pin & Patches</a></li>
-										<li><a>Jewelry</a></li>
-										<li><a>Handbags</a></li>
-										<li><a>Bag Charms</a></li>
-										<li><a>Belts</a></li>
-										<li><a>Sunglasses</a></li>
-										<li><a>Scarves & Ponchos</a></li>
-										<li><a>Hats & Hair Accessories</a></li>
-										<li><a>Tights & Socks</a></li>
-										<li><a>Fragrance & Beauty</a></li>
-									</ul>
-							</div>
-						</div>
 					</li>
 					<li id="li-men" class="show-menu-nav"><a href="">MEN</a></li>
-					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li> 
-					<li id="li-trending" class="show-menu-nav"><a href="">TRENDING</a></li> 
-					<li id="li-edition" class="show-menu-nav"><a href="">EDITION</a></li> 
-				</ul>	
+					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li>
+					<li id="li-trending" class="show-menu-nav"><a href="">TRENDING</a></li>
+				</ul>
 			</div>
-
-			
-		</div>
-	</nav>
+			<div class="container-toolbar">
+				<ul class="list-toolbar">
+					<li>
+						<a href="#">
+							<span class="icon-search"></span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="icon-search"></span>
+						</a>
+					</li>
+					<li>
+						<a href="#">Sign In</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 </header>
-
-
-
 <script>
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();   
