--- a/header.html
+++ b/header.html
@@ -24,18 +24,20 @@
 			</div>
 			<div class="container-toolbar">
 				<ul class="list-toolbar">
-					<li>
+					<li class="component-search">
 						<a href="#">
 							<span class="icon-search"></span>
 						</a>
 					</li>
-					<li>
-						<a href="#">
-							<span class="icon-search"></span>
+					<li class="component-bag">
+						<a class="bag-link" href="#">
+							<span class="icon-shop-bag">0</span>
 						</a>
 					</li>
-					<li>
-						<a href="#">Sign In</a>
+					<li class="component-login">
+						<a href="#">
+							
+						Sign In</a>
 					</li>
 				</ul>
 			</div>
