--- a/header.html
+++ b/header.html
@@ -1,44 +1,256 @@
 <header class="header-style">
 	<div class="container-header">
 		<nav class="navbar" role="navigation">
-			<div class="container-promo">
-				Free Shipping On Orders $125+
-				<span>
-					<a href="#" class="promo-item">Details</a>
-				</span>
-			</div>			
+			<div class="container-promo-toolbar">
+				<div class="container-promo">
+					Free Shipping On Orders $125+
+					<span>
+						<a href="#" class="promo-item">Details</a>
+					</span>
+				</div><br>
+				<div class="container-toolbar">
+					<ul class="list-toolbar">
+						<li class="component-search">
+							<a href="#">
+								<span class="icon-search"></span>
+							</a>
+						</li>
+						<li class="component-bag">
+							<a class="bag-link" href="#">
+								<span class="icon-shop-bag">0</span>
+							</a>
+						</li>
+						<li class="component-login">
+							<a  class="item-in" href="#">Sign In</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 			<div class="container-header-logo navbar-header">
 				<a class="navbar-brand" href="/">
 					<img src="/test1/imagenes/express-logo-white.png">
 				</a>
 			</div>
-			<div class="collapse navbar-collapse">
+			<div class="collapse navbar-collapse navbar-custom">
 				<ul class="nav navbar-nav nav-custom">
-					<li id="li-women">
+					<li id="li-women" class="nav-dropdown">
 						<a href="">WOMEN</a>
+						<div class="dropdown-content horizontal-form">
+							<div class="row row-custom">
+								<div class="vertical-form col-md-2 container-menu-list">
+									<h6><b>FEATURED</b></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">New Arrivals</a></li>
+										<li><a href="#">Lesli Dale Jewelry</a></li>
+										<li><a href="#">Deepa Gurnani Jewelry</a></li>
+										<li><a href="#">Home & Travel Accessories</a></li>
+										<li><a href="#">Clearance</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>DRESSES</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Mini Dresses</a></li>
+										<li><a href="#">Midi Dresses</a></li>
+										<li><a href="#">Maxi Dresses</a></li>
+										<li><a href="#">Fit & Flare Dresses</a></li>
+										<li><a href="#">Slip Dresses</a></li>
+										<li><a href="#">Cocktail Dresses</a></li>
+										<li><a href="#">Little Black Dresses</a></li>
+										<li><a href="#">Jumpsuits & Rompers</a></li>
+										<li><a href="#">Two-Piece Chic</a></li>
+										<li><a href="#">Wedding</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>TOPS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Express One Eleven</a></li>
+										<li><a href="#">Bralettes & Bodysuits</a></li>
+										<li><a href="#">Camis & Tanks</a></li>
+										<li><a href="#">Graphic Tees</a></li>
+										<li><a href="#">Tees</a></li>
+										<li><a href="#">Shirts & Blouses</a></li>
+										<li><a href="#">Portofino Shirts</a></li>
+										<li><a href="#">Going Out Tops</a></li>
+										<li><a href="#">Sweaters & Cardigans</a></li>
+										<li><a href="#">Jackets & Outerwear</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>BOTTOMS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Jeans</a></li>
+										<li><a href="#">Pants</a></li>
+										<li><a>Editor Pants</a></li>
+										<li><a href="#">Columnist Pants</a></li>
+										<li><a href="#">Leggings</a></li>
+										<li><a href="#">Crops & Culottes</a></li>
+										<li><a href="#">Flares & Wide Legs</a></li>
+										<li><a href="#">Shorts</a></li>
+										<li><a href="#">Skirts</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>ACCESSORIES</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Pin & Patches</a></li>
+										<li><a href="#">Jewelry</a></li>
+										<li><a href="#">Handbags</a></li>
+										<li><a href="#">Bag Charms</a></li>
+										<li><a href="#">Belts</a></li>
+										<li><a href="#">Sunglasses</a></li>
+										<li><a href="#">Scarves & Ponchos</a></li>
+										<li><a href="#">Hats & Hair Accessories</a></li>
+										<li><a href="#">Tights & Socks</a></li>
+										<li><a href="#">Fragrance & Beauty</a></li>
+									</ul>
+							</div>
+							</div>
+							<div class="row">
+								<div class="vertical-form col-md-2 container-menu-list">
+									<h6><b>WEAR TO WORK</b></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Suits</a></li>
+										<li><a href="#">Blazers</a></li>
+										<li><a href="#">Dresses & Skirts</a></li>
+										<li><a href="#">Dress Pants</a></li>
+										<li><a href="#">Work Shirts</a></li>
+									</ul>
+							</div>					
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>SHOES</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Sandals</a></li>
+										<li><a href="#">Heels</a></li>
+										<li><a href="#">Flats</a></li>
+										<li><a href="#">Wedges & Boots</a></li>
+										<li><a href="#">Work Shirts</a></li>
+									</ul>
+							</div>					
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>JEWELRY</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Necklaces</a></li>
+										<li><a href="#">Bracelets</a></li>
+										<li><a href="#">Rings</a></li>
+										<li><a href="#">Earrings</a></li>
+									</ul>
+							</div>					
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>ACTIVEWEAR</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Sports Bras</a></li>
+										<li><a href="#">Workout Tops</a></li>
+										<li><a href="#">Workout Jackets</a></li>
+										<li><a href="#">Workout Leggings</a></li>
+									</ul>
+							</div>					
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>SWIMSUITS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Bikini Tops</a></li>
+										<li><a href="#">Bikini Bottoms</a></li>
+										<li><a href="#">One Piece Suits</a></li>
+										<li><a href="#">Beach Cover-Ups</a></li>
+									</ul>
+							</div>
+							</div>						
+						</div>
 					</li>
-					<li id="li-men" class="show-menu-nav"><a href="">MEN</a></li>
+					<li id="li-men" class="nav-dropdown">
+						<a href="">MEN</a>
+						<div class="horizontal-form dropdown-content category-2">
+							<div class="row row-custom">
+								<div class="vertical-form col-md-2 container-menu-list">
+									<h6><b>FEATURED</b></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">New Arrivals</a></li>
+										<li><a href="#">Lesli Dale Jewelry</a></li>
+										<li><a href="#">Deepa Gurnani Jewelry</a></li>
+										<li><a href="#">Home & Travel Accessories</a></li>
+										<li><a href="#">Clearance</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>SUITS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Mini Dresses</a></li>
+										<li><a href="#">Midi Dresses</a></li>
+										<li><a href="#">Maxi Dresses</a></li>
+										<li><a href="#">Fit & Flare Dresses</a></li>
+										<li><a href="#">Slip Dresses</a></li>
+										<li><a href="#">Cocktail Dresses</a></li>
+										<li><a href="#">Little Black Dresses</a></li>
+										<li><a href="#">Jumpsuits & Rompers</a></li>
+										<li><a href="#">Two-Piece Chic</a></li>
+										<li><a href="#">Wedding</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>TOPS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Express One Eleven</a></li>
+										<li><a href="#">Bralettes & Bodysuits</a></li>
+										<li><a href="#">Camis & Tanks</a></li>
+										<li><a href="#">Graphic Tees</a></li>
+										<li><a href="#">Tees</a></li>
+										<li><a href="#">Shirts & Blouses</a></li>
+										<li><a href="#">Portofino Shirts</a></li>
+										<li><a href="#">Going Out Tops</a></li>
+										<li><a href="#">Sweaters & Cardigans</a></li>
+										<li><a href="#">Jackets & Outerwear</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>BOTTOMS</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Jeans</a></li>
+										<li><a href="#">Pants</a></li>
+										<li><a>Editor Pants</a></li>
+										<li><a href="#">Columnist Pants</a></li>
+										<li><a href="#">Leggings</a></li>
+										<li><a href="#">Crops & Culottes</a></li>
+										<li><a href="#">Flares & Wide Legs</a></li>
+										<li><a href="#">Shorts</a></li>
+										<li><a href="#">Skirts</a></li>
+									</ul>
+							</div>
+							<div class="vertical-form col-md-2 container-menu-list">
+									<h6><a href="#"><b>ACCESSORIES</b></a></h6>
+								<hr>
+									<ul class="menu-featured">
+										<li><a href="#">Pin & Patches</a></li>
+										<li><a href="#">Jewelry</a></li>
+										<li><a href="#">Handbags</a></li>
+										<li><a href="#">Bag Charms</a></li>
+										<li><a href="#">Belts</a></li>
+										<li><a href="#">Sunglasses</a></li>
+										<li><a href="#">Scarves & Ponchos</a></li>
+										<li><a href="#">Hats & Hair Accessories</a></li>
+										<li><a href="#">Tights & Socks</a></li>
+										<li><a href="#">Fragrance & Beauty</a></li>
+									</ul>
+							</div>
+							</div>								
+						</div>
+					</li>
 					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li>
 					<li id="li-trending" class="show-menu-nav"><a href="">TRENDING</a></li>
-				</ul>
-			</div>
-			<div class="container-toolbar">
-				<ul class="list-toolbar">
-					<li class="component-search">
-						<a href="#">
-							<span class="icon-search"></span>
-						</a>
-					</li>
-					<li class="component-bag">
-						<a class="bag-link" href="#">
-							<span class="icon-shop-bag">0</span>
-						</a>
-					</li>
-					<li class="component-login">
-						<a href="#">
-							
-						Sign In</a>
-					</li>
 				</ul>
 			</div>
 		</nav>
