--- a/header.html
+++ b/header.html
@@ -168,7 +168,7 @@
 							</div>						
 						</div>
 					</li>
-					<li id="li-men" class="nav-dropdown">
+					<li id="li-men">
 						<a href="">MEN</a>
 						<div class="horizontal-form dropdown-content category-2">
 							<div class="row row-custom">
