--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 			<div class="container-header-logo navbar-header">
-				<a class="navbar-brand" href="/">
+				<a class="navbar-brand" href="index.php">
 					<img src="imagenes/express-logo-white.png">
 				</a>
 			</div>
@@ -41,7 +41,7 @@
 									<h6><b>FEATURED</b></h6>
 								<hr>
 									<ul class="menu-featured">
-										<li><a href="#">New Arrivals</a></li>
+										<li><a href="catalog.php">New Arrivals</a></li>
 										<li><a href="#">Lesli Dale Jewelry</a></li>
 										<li><a href="#">Deepa Gurnani Jewelry</a></li>
 										<li><a href="#">Home & Travel Accessories</a></li>
