--- a/header.html
+++ b/header.html
@@ -3,9 +3,9 @@
 		<nav class="navbar" role="navigation">
 			<div class="container-promo-toolbar">
 				<div class="container-promo">
-					Free Shipping On Orders $125+
+					Envio gratuito en compras mayor a $125
 					<span>
-						<a href="#" class="promo-item">Details</a>
+						<a href="#" class="promo-item">Detalle</a>
 					</span>
 				</div><br>
 				<div class="container-toolbar">
@@ -21,7 +21,7 @@
 							</a>
 						</li>
 						<li class="component-login">
-							<a  class="item-in" href="#">Sign In</a>
+							<a  class="item-in" href="#">Entrar</a>
 						</li>
 					</ul>
 				</div>
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse navbar-custom">
 				<ul class="nav navbar-nav nav-custom">
 					<li id="li-women" class="nav-dropdown">
-						<a href="">WOMEN</a>
+						<a href="">MUJER</a>
 						<div class="dropdown-content horizontal-form">
 							<div class="row row-custom">
 								<div class="vertical-form col-md-2 container-menu-list">
@@ -169,7 +169,7 @@
 						</div>
 					</li>
 					<li id="li-men">
-						<a href="">MEN</a>
+						<a href="">HOMBRE</a>
 						<div class="horizontal-form dropdown-content category-2">
 							<div class="row row-custom">
 								<div class="vertical-form col-md-2 container-menu-list">
@@ -249,8 +249,8 @@
 							</div>								
 						</div>
 					</li>
-					<li id="li-sale" class="show-menu-nav"><a href="">SALE</a></li>
-					<li id="li-trending" class="show-menu-nav"><a href="">TRENDING</a></li>
+					<li id="li-sale" class="show-menu-nav"><a href="">OFERTAS</a></li>
+					<li id="li-trending" class="show-menu-nav"><a href="">TENDENCIAS</a></li>
 				</ul>
 			</div>
 		</nav>
