--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-custom">
 				<ul class="nav navbar-nav nav-custom">
-					<li id="li-women" class="nav-dropdown">
+					<li id="li-women">
 						<a href="">MUJER</a>
 						<div class="dropdown-content horizontal-form">
 							<div class="row row-custom">
